--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.0.14",
-    "react-test-renderer": "^16.0.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
@@ -25,6 +24,7 @@
   },
   "devDependencies": {
     "fetch-mock": "^5.12.2",
-    "redux-mock-store": "^1.3.0"
+    "redux-mock-store": "^1.3.0",
+    "react-test-renderer": "^16.0.0"
   }
 }
