--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "dependencies": {
     "bootstrap": "3",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.1",
     "font-awesome": "^4.7.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -24,7 +22,10 @@
   },
   "devDependencies": {
     "fetch-mock": "^5.12.2",
+    "jest-enzyme": "^4.0.0",
+    "react-test-renderer": "^16.0.0",
     "redux-mock-store": "^1.3.0",
-    "react-test-renderer": "^16.0.0"
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1"
   }
 }
