--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "deep-freeze": "^0.0.1",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "fetch-mock": "^5.12.2",
     "jest-enzyme": "^4.0.0",
     "react-test-renderer": "^16.0.0",
-    "redux-mock-store": "^1.3.0",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.1"
+    "redux-mock-store": "^1.3.0"
   }
 }
